--- a/ASPDOTNET_FRAMEWORK_CRUD/bin/ASPDOTNET_FRAMEWORK_CRUD.dll.config
+++ b/ASPDOTNET_FRAMEWORK_CRUD/bin/ASPDOTNET_FRAMEWORK_CRUD.dll.config
@@ -14,6 +14,16 @@
     <compilation debug="true" targetFramework="4.8" />
     <httpRuntime targetFramework="4.8" />
   </system.web>
+	<system.webServer>
+		<rewrite>
+			<rules>
+				<rule name="Redirect to crud.aspx" stopProcessing="true">
+					<match url="^$" />
+					<action type="Rewrite" url="/crud.aspx" />
+				</rule>
+			</rules>
+		</rewrite>
+	</system.webServer>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
